# zenit-agent

./: .gitignore  README.md  pyproject.toml
agents/: langgraph.json  pyproject.toml
agents/src/management_agent/: Dockerfile  agent.py  main.py
agents/src/management_agent/api/data/: management_qdrant.py
agents/src/management_agent/api/requests/: message_request.py  qdrant_upsert_request.py
agents/src/management_agent/api/routes/: message_route.py
agents/src/management_agent/common/: management_env_constants.py  management_qdrant_constants.py
agents/src/management_agent/graphs/: main_graph.py
agents/src/management_agent/nodes/: confirm_node.py  extract_content_node.py  handle_missing_fields_node.py  transaction_node.py  user_confirmation_node.py
agents/src/management_agent/nodes/helpers/: extract_content_helper.py
agents/src/management_agent/prompts/: extract_content_prompt.py  handle_missing_fields_prompt.py  parse_content_prompt.py  transaction_prompt.py
agents/src/management_agent/states/: main_state.py
agents/src/management_agent/tools/: category.py  transaction.py  wallet.py
agents/src/management_agent/tools/helpers/: authentication_helper.py
agents/src/management_agent/tools/requests/: create_transaction_request.py
infrastructures/: docker-compose.yml
shared/: pyproject.toml
shared/src/common/: env_constants.py  generic_type.py  llm_constants.py  qdrant_constants.py
shared/src/data/: qdrant_base.py
shared/src/data/interfaces/: i_qdrant.py
shared/src/data/requests/: qdrant_search_request.py  qdrant_upsert_request.py
shared/src/graphs/: graph_base.py  i_graph.py
shared/src/states/: state_base.py
shared/src/utils/: llm_util.py
