[project]
name = "shared"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ThuyVan032004", email = "dovan032004@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.4.12",
    "langchain-google-genai>=4.2.1",
    "langgraph>=1.1.6",
    "langgraph-checkpoint-postgres>=3.0.5",
    "qdrant-client>=1.17.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
